test_programs/compile_failure/radix_non_constant_length/src/main.nr
fn main(x: Field, y: pub u32) {
    let bytes = x.to_be_bytes(y);
    assert(bytes[0] == 0);
}
